2.26 2021-02-15
- ExtUtils::F77 is not a runtime requirement
- tests no longer ask for device - set the environment var (default /NULL)

2.25 2021-02-13
- macOS11 patch for LD flags - thanks @karlglazebrook
- use Devel::CheckLib to find right PNG lib

2.24 2019-03-19
 - doc updates - thanks @djerius
 - patches to use pkg-config if available - thanks @djerius

2.23 2019-03-17
 - typo fix from gregor herrmann <gregoa@debian.org>
 - add CONFIGURE_REQUIRES dep - thanks CHORNY for report

2.22 2019-03-17
 - Minor change to Makefile.PL to add link with libpng12,libz (avoids PERL_DL_NONLAZY
   error with SciPDL), and also to search SciPDL directory /Applications/PDL/pgplot
 - fixes to tests to work on Perl 5.26+
 - metadata updates

2.21 2011-01-01
 - Semi-dirty hack in Makefile.PL to force i386/x86_64 single arch only builds on Mac OS X. - Karl
   (for libpgplot compatibility which seems to be generally built this way, e.g. in SciKarl)
   Note added some clever code to try and match the arch of the pgplot binaries.
 - PGPLOT::HANDLE warning fix (Chris Phillips Jun 2010)
 - Make linking order -lcpgplot -lpgplot for cygwin (Chris Marshall Dec 2010)

2.20 2007-05-16
 - Doug Burke's Makefile.PL patch - re-org and better OS X support.
 - Added /usr/local/pgplot to the include search path
 - Added -png to the default list of libs as just about every pgplot build needs this
 - Now works cleanly on Intel and PPC OS X with gcc, g77 and gfortran
 - Added INSTALL, INSTALL-MacOSX and INSTALL-Win32 instruction files and updated README

2.19 2006-01-03
 - Diab's patch to allow specifying alternate libary paths on the command line (see HELP)
 - Added pgpt1 and pgerr1 back for compatibility with latest C PGPLOT
 - Win32 patches from Rob - Sisyphus <kalinabears@iinet.net.au> (2005/1/25)

2.18 2000-12-28
 - Added file HINTS.osf, updated HELP
 - Fixed memory leak in coerce1D (thanks to Pete Ratzlaff)
 - Added Doug Hunt's internals patch to export more pgplot C routines